--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-middleware": "^3.4.2",
+    "express-rate-limit": "^6.7.0",
+    "middleware": "^1.0.0"
   }
 }
